<resources>
    <string name="app_name">FeaturringFoodDelivery</string>
    <string name="logged_in">Keep me signed in</string>
    <string name="login">Login Now</string>
    <string name="skip">Skip</string>
    <string name="title_activity_home_recycle_view">HomeRecycleView</string>

    <string name="hello_world">Hello world!</string>

    <string name="GPSAlertDialogTitle">GPS!</string>
    <string name="GPSAlertDialogMessage">Location!</string>
    <string name="action_settings">Setting!</string>
    <string name="cancel">Cancel</string>

    <string name="google_maps_api_key">AIzaSyB3_aRArcRZxO8Tz9nBWswQRMgR5HOKuGw</string>

    // paymentStripe
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="pay_now">Pay Now</string>
    <string name="more_info">More info</string>
    <string name="ok">OK</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="feel_free">If you have any question feel free to <u>contact us.</u></string>
    <string name="contact_us">contact us</string>
    <string name="send_notification">We will send you notification as soon as the
                                     product dispatched from here.</string>
    <string name="thanks">Thanks for placing for order - ></string>

    //volley
    <string name="Ok">Ok</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="InternetNotAvailabel">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="my_profile">My Profile</string>


    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>
    <string name="title_activity_add_adress">AddAdress</string>
    <string name="title_activity_google_map">Map</string>


</resources>
